--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://telegram.org/js/telegram-web-app.js?59"></script>
     <title>Document</title>
 </head>
 <body>
     привет
+    <script>    
+    tg = window.Telegram.WebApp;
+    alert(tg.version);
+    </script>
 </body>
 </html>
