--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    привет
+    привет 
     <script>    
     tg = window.Telegram.WebApp;
     alert(tg.version);
+    alert(tg.initData.user.first_name);
     </script>
 </body>
 </html>
