--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script>    
     tg = window.Telegram.WebApp;
     alert(tg.version);
-    alert(tg.initData.user.first_name);
+    alert(tg.initDataUnsafe.user.id);
     </script>
 </body>
 </html>
