--- a/index.html
+++ b/index.html
@@ -10,8 +10,16 @@
     привет 
     <script>    
     tg = window.Telegram.WebApp;
-    alert(tg.version);
-    alert(tg.initDataUnsafe.user.id);
+    
+    let server_url = 'https://zettadevelop.ru/auth/'
+
+    //добавить обработку на сервере
+
+    fetch(server_url, {
+        method: "POST",
+        body: JSON.stringify({ initData: Telegram.WebApp.initData }),
+        headers: { "Content-Type": "application/json" }
+        })
     </script>
 </body>
 </html>
